# AdvModernCPP

./: .gitignore
interview_topics/constexpr/: explanation.md  interview.apkg  interview.md
interview_topics/constexpr/src/: compile_time_math.cpp  consteval_config.cpp  constexpr_geometry.cpp  constexpr_ranges.cpp  constexpr_span_pipeline.cpp
tools/topic_walker/: README.md  cppTopicWalker.spec  requirements.md
tools/topic_walker/scripts/: package_linux.sh  package_mac.sh
tools/topic_walker/topic_walker/: __init__.py  app.py  database.py  installer.py
train/Module_1/: Readme.md  iterator_functionObject_dataprocessing.md  iterator_manipulation_notes.md  practice_assignment_notes.md  stl_pipeline_notes.md
train/Module_1/samples/: CMakeLists.txt  dataprocesingAlgo.cpp  dataprocesingAlgo_sol.cpp  microbenchmarking.md  sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  stlAlgoPipeline_practice.cpp  stlAlgoPipeline_practice_range.cpp  stlAlgoPipeline_practice_range_ref.cpp  stlAlgoPractice.cpp  stlAlgoPractice_2.cpp  stlAlgoPractice_3.cpp  stlAlgoRange.cpp  stl_Iterator_functor.cpp  stl_iterator_functor_2.cpp  stl_iterator_functor_ranges.cpp
train/Module_1/samples/iterator_functionObject_dataprocesing/: CMakeLists.txt  iterator_processing.cpp  iterator_processing_sol.cpp
train/Module_2_threading/: Readme.md  sync_practice_assignment.md  synchronissation_dialog.md  thead_creation_mgmt.md
train/Module_2_threading/samples/async_future_promise/: AsyncTaskManager.h  CMakeLists.txt  DynamicThreadPool.h  LockFreeQueue.h  async_task_mgr.cpp  async_task_mgr_custom.cpp  async_task_mgr_lambda.cpp  integrated_concurrency_arch.cpp  integrated_concurrency_arch_orig.cpp  lockfree_ds_and_mem_order.cpp  logging.h  summary_readme.md  threadpool_prioritySched.cpp
train/Module_2_threading/samples/basic_multithreading/: CMakeLists.txt  condition_variables.cpp  condition_variables_latest.cpp  readme.md  thread_lifecycle.cpp  thread_mgmt.cpp  thread_pool.cpp  thread_pool_latest.cpp  thread_pool_latest_older.cpp
train/Module_2_threading/samples/basic_multithreading/benchmarking/: single_threaded.cpp
train/Module_2_threading/samples/synchronisation/: CMakeLists.txt  deadlock_prevention.cpp  hw.cpp  lock_free.cpp  lock_free_ai.cpp  lock_free_interview.md  producer_consumer_interview.md  producer_consumer_pq.cpp  producer_consumer_pq_ai.cpp  readme.md  thread_sync.cpp
train/Module_2_threading/samples/synchronisation_2/: CMakeLists.txt  mutex_deadlock_avoid.cpp  mutex_deadlock_avoid_sol.cpp
